# .fmt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
fmtgen/: __init__.py  core.py  exceptions.py  schema.py  types.py
fmtgen/backends/: __init__.py  base.py  llguidance_backend.py  lmfe_backend.py  outlines_backend.py  xgrammar_backend.py
fmtgen/providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  vllm_provider.py
tests/: test_core.py  test_providers.py
