[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fmtgen"
version = "0.1.0"
description = "One API for structured LLM outputs. Every backend. Every provider."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Armillary Sphere LLC" },
]
keywords = ["llm", "structured-generation", "pydantic", "constrained-decoding", "json-schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
outlines = ["outlines>=0.1.0"]
xgrammar = ["xgrammar>=0.1.0"]
llguidance = ["llguidance>=0.1.0"]
lmfe = ["lm-format-enforcer>=0.10.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
all = [
    "outlines>=0.1.0",
    "xgrammar>=0.1.0",
    "llguidance>=0.1.0",
    "lm-format-enforcer>=0.10.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/jerryhsiang/.fmt"
Repository = "https://github.com/jerryhsiang/.fmt"
Issues = "https://github.com/jerryhsiang/.fmt/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
